# security-envelopes

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.sgx  LICENSE  README.md  SECURITY.md  docker-compose.jepsen.yml  lakefile.lean  requirements.txt
.github/workflows/: ci.yml  formal-verify.yml  policy-lint.yml
Spec/Attest/: Quote.lean  SEV.lean  SGX.lean
Spec/RBAC/: ABAC.lean  Core.lean  Proofs.lean
Spec/Tenant/: FSM.lean
Spec/Tests/: Attest.lean  RBAC.lean  Tenant.lean
bindings/go/: policyengine.go
bindings/node/: Cargo.toml  package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  policyengine.py  setup.py
bundle/: gen.py
chaos-scripts/: network-partition.sh
engine/: Cargo.toml
engine/include/: policyengine.h
engine/src/: attestation.rs  config.rs  crypto.rs  error.rs  lib.rs  policy.rs  wasm.rs
examples/01_simple_rbac/: policy.yaml
examples/02_multi_tenant/: policy.yaml
examples/03_sgx_demo/: policy.yaml
scripts/: README.md  policy_lint.py
