[workspace]
members = ["engine"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Security Envelopes Team"]
description = "Formally verified security system with RBAC, tenant isolation, and remote attestation"
license = "MIT"
repository = "https://github.com/security-envelopes/security-envelopes"
keywords = ["security", "rbac", "abac", "wasm", "policy", "attestation", "sgx", "sev"]
categories = ["security", "web-programming"]

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# WASM runtime
wasmtime = "15.0"
wasmtime-wasi = "15.0"

# Cryptography
ring = "0.17"
ed25519-dalek = "2.0"
sha2 = "0.10"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP/gRPC support
axum = "0.7"
tonic = "0.10"
prost = "0.12"

# NATS support
nats = "0.32"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.14"

# CLI
clap = { version = "4.0", features = ["derive"] }

# YAML
serde_yaml = "0.9"

# Hex encoding
hex = "0.4"

# Bincode
bincode = "1.3"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true 